# GGJ2018

./: .gitignore  Attempt make Entity.hpp display.hpp.7z  CREDITS.md  Entity.cpp  Makefile  README.md  TODO.md  display.cpp  main.cpp  map.cpp  sound.cpp
other/: isBlocking () attempts.cpp  tryDir raycast attempt.cpp
src/: CMakeLists.txt  Entity.cpp  config.hpp  display.cpp  main.cpp  map.cpp  map.hpp  math.cpp  math.hpp  sound.cpp  sound.hpp
